fix: Add the net.bytebuddy.experimental=true system property
Workaround to make Mockito tests to pass under Java 21

Signed-off-by: Ryan Prayogo <57620+ryanprayogo@users.noreply.github.com>